# rpp

./: CMakeLists.txt  README.md  Readme.md
.github/workflows/: hip_build_tests.yaml  host_build_tests.yaml  ocl_build_tests.yaml  rpp_build_tests_cpu.yaml  rpp_build_tests_hip.yaml  rpp_build_tests_ocl.yaml
include/: rppdefs.h  rppi_geometry_transforms.h  rppt_tensor_arithmetic_operations.h  rppt_tensor_audio_augmentations.h  rppt_tensor_augmentations.h  rppt_tensor_color_augmentations.h  rppt_tensor_data_exchange_operations.h  rppt_tensor_effects_augmentations.h  rppt_tensor_geometric_augmentations.h  rppt_tensor_statistical_operations.h
src/include/cpu/: rpp_cpu_common.hpp  rpp_cpu_simd.hpp
src/include/hip/: rpp_hip_common.hpp
src/modules/: rppi_geometry_transforms.cpp  rppi_validate.hpp  rppt_tensor_arithmetic_operations.cpp  rppt_tensor_augmentations.cpp  rppt_tensor_color_augmentations.cpp  rppt_tensor_data_exchange_operations.cpp  rppt_tensor_effects_augmentations.cpp  rppt_tensor_geometric_augmentations.cpp  rppt_tensor_statistical_operations.cpp
src/modules/cpu/: host_color_model_conversions.hpp  host_fused_functions.hpp  host_geometry_transforms.hpp  host_image_augmentations.hpp  host_tensor_augmentations.hpp  host_tensor_effects_augmentations.hpp  host_tensor_statistical_operations.hpp
src/modules/hip/: hip_declarations.hpp  hip_geometry_transforms.cpp  hip_tensor_arithmetic_operations.hpp  hip_tensor_augmentations.hpp  hip_tensor_color_augmentations.hpp  hip_tensor_data_exchange_operations.hpp  hip_tensor_statistical_operations.hpp
utilities/rpp-performancetests/: README.MD
utilities/rpp-unittests/: README.MD
utilities/rpp-unittests/CUDA_COMPARES/: CMakeLists.txt  cuda_optical_flow.cpp
utilities/test_suite/: rpp_test_suite_common.h  rpp_test_suite_misc.h
(+88 files in other folders)
